--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
+    "node-mailjet": "^6.0.5",
+    "nodemailer": "^6.9.7",
+    "otp-generators": "^1.0.3",
     "socket.io": "^4.7.2",
     "validator": "^13.9.0"
   }
