--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -19,6 +20,7 @@
     "node-mailjet": "^6.0.5",
     "nodemailer": "^6.9.7",
     "otp-generators": "^1.0.3",
+    "razorpay": "^2.9.2",
     "socket.io": "^4.7.2",
     "validator": "^13.9.0"
   }
