--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.6.3",
     "chart.js": "^4.3.0",
     "jspdf": "^2.5.1",
+    "jspdf-invoice-template": "^1.4.3",
+    "jspdf-invoice-template-nodejs": "^1.4.30",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
